test/data/pass/misc/lexical_uniqueness.js
function a(b, b) {} //<>
function a(b) { var b; } //<>
function a([b]) { var b; } //<>
function a() { 'use strict'; var b; var b; } //<>
function a() { 'use strict'; for(var a, a;;); } //<>
