test/data/fail/literals/string.js
''
//<>
'
'//<>\u{110000}
//<>
'use strict'; '\1';
//<>
'use strict'; '\8';
//<>
'use strict'; '\01';
//<>
'use strict'; '\377';
